--- a/source/stylesheets/partials/_venue.sass
+++ b/source/stylesheets/partials/_venue.sass
@@ -49,6 +49,7 @@
 
     &.description
       height: auto
+      overflow: visible
       font-size: 0.9em
       margin: 2em 0
 
@@ -65,6 +66,7 @@
 
           img
             margin: 0 auto
+            height: auto
 
           &:before
             content: "."
