--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -1,28 +1,7 @@
 !!! 5
 - ie_html :lang => 'en', :class => 'no-js' do
   %head
-    %meta(charset="utf-8")
-    %meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
-    %title= current_page.data.title
-    %meta(content="" name="description")
-    %meta(content="" name="author")
-    %meta(content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport")
-
-    %link(rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png?v2")
-    %link(rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png?v2")
-    %link(rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png?v2")
-    %link(rel="apple-touch-icon" href="apple-touch-icon-precomposed.png?v2")
-    %link(rel="shortcut icon" href="favicon.png?v2")
-    %link(rel="icon" type="image/ico" href="favicon.ico?v2")
-
-    = javascript_include_tag "vendor/modernizr-2.6.1.min"
-    = stylesheet_link_tag "site"
-
-    = javascript_include_tag "//use.typekit.net/vor5lqb.js"
-    :javascript
-      try{Typekit.load();}catch(e){}
-
-    = partial 'partials/analytics'
+    = partial "partials/layout_head"
 
   %body#top
     %iframe#eurucamp-week-bar(src="//eurucamp-week-bar.herokuapp.com?group=jruby_conf" scrolling="no")
