Adjust styling for home link.

--- a/source/stylesheets/partials/_navigation.sass
+++ b/source/stylesheets/partials/_navigation.sass
@@ -28,6 +28,9 @@ nav.navigation
       +transition(all 0.15s)
       border-bottom: 1px dotted $dark-gray
 
+      strong
+        +custom-sans(bold)
+
       &:hover
         +transition(all 0.15s)
         border-bottom-style: solid
