--- a/source/stylesheets/partials/_speakers.sass
+++ b/source/stylesheets/partials/_speakers.sass
@@ -1,7 +1,7 @@
 #speakers
   @extend %row
 
-  ul
+  ul.speakers
     +unlisted
     width: 100%
     position: relative
@@ -13,6 +13,7 @@
       font-size: 0.75em
       margin: 2em 0
       letter-spacing: 0.09em
+      +transition(all 0.15s ease-out)
 
       a
         color: $gray
@@ -34,6 +35,86 @@
         +transition(all 0.15s)
         text-transform: none
         font-size: 1.25em
+
+  &.show-details
+    ul.speakers
+      @extend %clearfix
+
+      li
+        width: 10%
+        margin: 0 5px
+
+        img
+          width: 100%
+
+        strong, span
+          display: none
+
+    .details
+      display: block
+
+  ul.details
+    @extend %unlisted
+    @extend %clearfix
+    display: none
+    background: $white
+    border: 1px solid $lighter-gray
+    padding: 1em 20px
+
+    li
+      display: none
+      position: relative
+      opacity: 0
+      +transition(all 0.25s ease-in-out)
+
+      &.reveal
+        display: block
+        opacity: 1
+
+    a.close
+      font-size: 2em
+      color: $lighter-gray
+      position: absolute
+      top: -1.9em
+      right: 0
+
+      &:hover
+        color: $gray
+
+    .header
+      text-align: center
+
+      h3
+        margin-bottom: 0
+
+        &:after
+          margin-bottom: 0.5em
+
+      p.meta
+        margin: 0
+        text-align: center
+        color: $gray
+        font-size: 0.75em
+        text-transform: uppercase
+
+      img
+        width: 100px
+        border-radius: 75px
+        margin: 0 auto
+
+      p
+        color: $dark-gray
+        text-align: justify
+
+    .talk
+      h4
+        margin-left: -0.4em
+
+    h4
+      margin: 01em 0 1.5em
+      font-size: 0.9em
+      +custom-sans(bold)
+      text-transform: uppercase
 
   p.cfp-info
     background: $white
@@ -57,20 +138,20 @@
 
 
   +respond-to(smartphone-portrait)
-    ul
+    ul.speakers
       li
         width: percentage(1/2)
         display: inline-block
 
 
   +respond-to(smartphone-landscape)
-    ul
+    ul.speakers
       li
         width: percentage(1/3)
 
 
   +respond-to(tablet-portrait)
-    ul
+    ul.speakers
       li
         width: percentage(1/4)
 
@@ -83,15 +164,32 @@
         img
           width: 125px
 
+    ul.details
+      .column
+        margin: 0 20px
+
+      .bio, .talk
+        width: percentage(1/2)
+        float: left
+
+        h4
+          text-align: center
+          margin-left: 0
+
+    &.show-details
+      ul.speakers
+        li
+          width: 5%
+
 
   +respond-to(tablet-landscape)
-    ul
+    ul.speakers
       li
         width: percentage(1/5)
 
 
   +respond-to(desktop)
-    ul
+    ul.speakers
       li
 
         &.cfp
