Fixing missing placeholder.

--- a/source/stylesheets/partials/_speakers.sass
+++ b/source/stylesheets/partials/_speakers.sass
@@ -54,7 +54,7 @@
       display: block
 
   ul.details
-    @extend %unlisted
+    +unlisted
     @extend %clearfix
     display: none
     background: $white
