--- a/source/stylesheets/partials/_speakers.sass
+++ b/source/stylesheets/partials/_speakers.sass
@@ -51,6 +51,7 @@
           display: none
 
     .details
+      margin-top: -2px
       display: block
 
   ul.details
@@ -106,6 +107,7 @@
         color: $dark-gray
         text-align: justify
 
+
     .talk
       h4
         margin-left: -0.4em
@@ -117,6 +119,9 @@
       text-transform: uppercase
 
     .column
+      font-size: 0.9em
+      line-height: 1.6em
+
       li
         font-size: 1.125em
         line-height: 1.5em
