--- a/source/stylesheets/partials/_sponsors.sass
+++ b/source/stylesheets/partials/_sponsors.sass
@@ -24,7 +24,8 @@
         display: block
 
       img
-        width: 100%
+        width: 90%
+        margin: 0 5%
         display: block
 
   p.sponsor-info
@@ -61,7 +62,6 @@
         li
           width: percentage(1/3)
 
-
   +respond-to(smartphone-landscape)
     padding: 2em 0 0 0
 
@@ -73,7 +73,6 @@
       &.secondary
         li
           width: percentage(1/4)
-
 
   +respond-to(tablet-portrait)
     padding: 3em 0 0 0
