--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -14,4 +14,5 @@
 @import "partials/tickets";
 @import "partials/speakers";
 @import "partials/venue";
+@import "partials/schedule";
 @import "partials/sponsors";
